# Athena

./: .gitignore  BookMyShowFindShows.py  BookMyShowFindShowsURL.py  BookMyShowMovieSelction.py  BookMyShowSelectFormat.py  EXPNeel.csv  airbnb.py  api.py  bookmyshow_data.json  bus.py  commandline.py  config.py  demo.py  flights_data.json  frontend_data,json  functioncalling.py  hotel_data_goa.json  hotels_data.json  main.py  main2.py  movie_shows.json  movies_data.json  neel.csv  output.csv  piyushkulkarni.csv  products_data.json  pyproject.toml  readme.md  requirements.txt  rides_data.json  router.py  streamlit_app.py  test.py  tools.json  tools.py  tools2.py  updated_input_Neel.csv  updated_input_piyushkulkarni.csv  utils.py  zeptotest.py
Amazon/: payment.py  products_data.json  scrapping.py
BookMyshow/: 1MovieSelction.py  2ShowSelectFormat.py  3FindShowsURL.py  4BookMyShowFindShows.py  5.2Bookmyshow.py  5BookMyShowFindAvilabaleSeats.py  BookMyShowFindShows.py  test.html
FashionShopping/: __init__.py  carter.py
Hotel/: __init__.py  booking.py  hotels_data.json  piyushKabir.py  xpath.py
Movies/: __init__.py  movies.py  seats.py  utils.py  xpath.py
Paytmflights/: script.py  temp.py
Spotify/: __init__.py  function.py  process_command.py  process_input.py  prompt.py
airbnb/: __init__.py  airbnb_func.py  hotel_data_goa.json  neel.py  xpath.py
email/: email_automation.py  email_script.py
emailAutomation/: __init__.py  email_automation.py
flightCompare/: __init__.py  airportCode.json  airportCode.py  searchflight.py  xpaths.py
paytmbus/: __init__.py  generate_url.py  location_generate.py  web_scrape.py  xpath.py
paytmmovies/: 1Movieselction.py  2FindShows.py  3showavailabeseats.py  4selectGivenSeat.py  __init__.py
preplexity/: piyushkulkarni.py
(+1238 files in other folders)
